style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

:root{
    --danger: #B9001E;
    --btn-text-color: #FFFFFF;
    --btn-text-size: 30px;
    --btn-text-size-phone: 20px;
    --dark: #303030;
    --header-bg: #FFFFFF;
    --footer-bg: #F4F3F3;
    --menu-font-family: 'Roboto';
    --menu-font-size: 18px;
    --hero-font-family: 'Roboto';
    --hero-font-size: 4rem;
    --hero-font-size-phone: 2rem;
    --sub-heading-font-family: 'Roboto';
    --sub-heading-font-size: 3rem;
    --sub-heading-font-size-phone: 2rem;
    --text-font-family: 'Roboto';
    --text-font-size: 22px;
    --text-font-size-phone: 18px;
}

.btn-danger{
    background-color: var(--danger)!important;
    color: var(--btn-text-color);
}
.text-danger{
    color: var(--danger)!important;
}
p{
    font-size: var(--text-font-size);
    font-family: var(--text-font-family);
    font-weight: 300;
}
body{
    font-family: var(--text-font-family);
    color: var(--dark);
}
/* NavBar  */
.navbar{
    background-color: var(--header-bg);
}
.navbar .nav-item{
    cursor: pointer;
}
.navbar .nav-item a.nav-link{
    font-weight: 700;
    color: var(--danger);
    font-size: var(--menu-font-size);
    cursor: pointer!important;
    font-family: var(--menu-font-family);
    padding: 10px 20px;
}

/* Hero  */
.hero{
    background-color: #F9F5F6;
}
.py-120{
    padding-top: 120px;
    padding-bottom: 120px;
}
.hero h1{
    color: var(--danger);
    font-family: var(--hero-font-family);
    font-size: var(--hero-font-size);
}

/* About  */
#about{
    padding-top: 60px;
}
#about .btn{
    font-size: 22px;
}
#about .btn img{
    width: 50px;
    margin-left: 50px;
}
#about .btn-danger {
    font-size: var(--btn-text-size);
    padding: 10px 60px;
    font-weight: 700;
}

/* Success Stories  */
h2.sub-heading{
    font-family: var(--sub-heading-font-family);
    font-size: var(--sub-heading-font-size);
    text-align: center;
    font-weight: bold;
}
#success-stories{
    padding-top: 60px;
}
.success-row .col-lg-4 {
    margin-bottom: 100px;
}
#success-stories img{
    width: 50%;
    transform: translateY(-50%);
}
#success-stories p{
    margin-top: -40px!important;
    font-size: 18px;
    text-align: left;
}
.success{
    border: 4px solid var(--dark);
    border-radius: 10px;
    height: 100%;
    padding: 0 50px 20px;
    margin: 0 10px;
}
.success h4{
    font-weight: 400;
}
#success-stories .btn-danger{
    font-size: var(--btn-text-size);
    padding: 10px 60px;
    font-weight: 700;
}
/* Health Program  */
#health-programs{
    padding-top: 60px;
}
.bg-hp{
    background-color: #F4F3F3;
    margin: 10px;
}
.bg-hp h4{
    color: var(--danger);
}

/* How it works  */
#how-it-works{
    padding-top: 60px;
}
.number{
    width: 180px;
}
.number h2{
    font-size: 160px;
    font-family: var(--text-font-family);
    font-weight: 900;
    color: var(--danger);
}
.bullet-text{
    background-color: #F4F3F3;
    width: 100%;
    padding: 30px 50px;
}
#how-it-works ul li{
    font-size: 24px;
}
/* Table  */
.table{
    margin-top: 20px;
}
.table thead th{
    border: none!important;
}
.table th, table td{
    border: 4px solid var(--dark);
    padding: 30px 30px!important;
    font-size: 30px;
    text-align: center;
}
table tr:last-child td{
    border-bottom: 4px solid var(--dark);
    padding: 20px 30px!important;
}
.table tr td:last-child, .table tr th:last-child{
    background-color: #D1EDDC;
}
.table thead tr th:last-child{
    border-radius: 10px 10px 0 0;
    color: var(--danger);
    font-size: 36px;
}
.table tr td svg.bi-check-lg, .table tr td svg.bi-x-lg{
    font-weight: bold;
    font-size: 30px;
    background-color: #3EB24F;
    color: #FFFFFF;
    border-radius: 50%;
    padding: 5px;
}
.table tr td svg.bi-x-lg{
    background-color: var(--danger);
}
.table tr td a{
    display: inline-block;
    font-size: 22px;
    font-weight: 700;
    border-radius: 40px;
    padding: 15px 25px;
}

/* FAQs  */
#faqs{
    padding-top: 60px;
}
#faqs .accordion-item{
    border: none;
}
#faqs .accordion-button, .accordion-button:not(.collapsed){
    background-color: #F4F3F3;
}
#faqs .accordion-button:focus{
    box-shadow: none;
}
#faqs .accordion-button::after{
    content: "+";
    background-image: url();
    margin-left: 0;
    font-weight: 700;
    font-size: 20px;
}
#faqs .accordion-button:not(.collapsed)::after{
    content: "-";
    background-image: url();
    text-align: right;
    font-weight: 700;
    font-size: 20px;
}
#faqs .accordion-button{
    flex-direction: row-reverse;
    justify-content: flex-end;
}
h2.accordion-header .accordion-button{
    font-size: 24px;
}
/* Contact  */
#contact{

}
.bg-contact{
    background-color: var(--footer-bg);
}

.social{
    margin-top: 20px;
    display: flex;
    align-items: center;
    gap: 30px;
}
.social .bi-whatsapp{
    color: #1BA553;
}
.social .bi-envelope{

}
.social .instagram{
    width: 60px;
}
.social .social-text{
    font-size: 28px;
    font-weight: 300;
    color: var(--dark);
    text-decoration: none;
}
.hello{
    font-size: 20px;
}

/* About Us  */
.about{
    padding-top: 40px;
}
.about .abt-btn{
    font-size: 18px;
}
.about .abt-btn img{
    margin-left: 0;
    width: 40px;
    margin-right: 15px;
}

/* Media Query  */
/* @media  screen and (max-width: 992px){
    .success-row .col-lg-4:nth-child(2){
        margin-top: 100px;
        margin-bottom: 60px;
    }
} */

@media screen and (max-width: 768px) {
    #about .btn img{
        margin-left: 0;
    }
    .hero h1{
        font-size: var(--hero-font-size-phone);
    }
    h2.sub-heading{
        font-size: var(--sub-heading-font-size-phone);
    }
}

@media screen and (max-width: 576px){
    #about .btn-danger {
        font-size: var(--btn-text-size-phone);
        padding: 10px 25px;
    }
    #about>.row>.col-sm-4>img{
        margin-bottom: 30px;
    }
    p, #how-it-works ul li {
        font-size: var(--text-font-size-phone);
    }
    .abt-btn{
        text-align: center;
    }
    #success-stories .btn-danger {
        padding: 10px 30px;
        font-size: var(--btn-text-size-phone);
    }
    #success-stories img {
        width: 60%;
    }
    .number{
        width: 120px;
    }
    .number h2 {
        font-size: 120px;
    }
    .table thead tr th:last-child {
        font-size: 16px;
    }
    .table th, table td{
        padding: 10px 10px!important;
        font-size: 18px;
    }
    .table tr td svg.bi-check-lg, .table tr td svg.bi-x-lg {
        width: 30px;
        height: 30px;
    }
    table tr:last-child td {
        padding: 10px 5px!important;
    }
    .table tr td a {
        font-size: 14px;
        font-weight: 500;
        border-radius: 40px;
        padding: 10px 15px;
    }
    .social {
        margin-top: 10px;
        gap: 20px;
    }
    .social svg{
        width: 30px;
        height: 30px;
    }
    .social img.instagram{
        width: 30px;
    }
    .social .social-text {
        font-size: 20px;
    }
    .hello {
        font-size: 14px;
    }
}

